<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name" />

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description" />

        <EditText
            android:id="@+id/eventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Time (e.g. Jan 1 - Mar 1)" />

        <EditText
            android:id="@+id/eventPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Place" />

        <EditText
            android:id="@+id/regStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Registration Start (Optional)" />

        <EditText
            android:id="@+id/regEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Registration End (Optional)" />

        <EditText
            android:id="@+id/maxEntrants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Max Entrants (Optional)"
            android:inputType="number" />

        <Button
            android:id="@+id/saveEventButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>