<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/events"
        android:title="Events"
        android:icon="@drawable/ic_events"/>
    <item
        android:id="@+id/QRScan"
        android:title="QR Scan"
        android:icon="@drawable/baseline_qr_code_scanner_24"/>
    <item
        android:id="@+id/organizer"
        android:title="Organizer"
        android:icon="@drawable/organizer_folder"/>
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_profiles"/>
    <!-- ADDED -->
    <item
        android:id="@+id/calendar"
        android:title="Calendar"
        android:icon="@drawable/ic_calendar"/>
</menu>